import java.util.List;

public interface Team {

    String GetName();

    List<Player> GetPlayers();
    
}